@@ -697,3 +697,11 @@ soup_message_set_http_version  (SoupMessage *msg, SoupHttpVersion version)
 
 	msg->priv->http_version = version;
 }
+
+SoupHttpVersion
+soup_message_get_http_version  (SoupMessage *msg)
+{
+	g_return_if_fail (msg != NULL);
+	
+	return msg->priv->http_version;
+}
