@@ -1,3 +1,8 @@
+2002-01-17  Joe Shaw  <joe@ximian.com>
+
+	* src/libsoup/soup-message.c: Add a
+	soup_message_get_http_version() function.
+
 2001-12-19  Alex Graveley  <alex@ximian.com>
 
 	* src/soup-ssl-proxy/soup-openssl.c (soup_openssl_seed): #define
